# Repox

./: .gitignore  FINAL_SUMMARY.md  MANIFEST.in  Makefile  README.md  README_old.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_complete_functionality.py  test_core_functionality.py  verify_install.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v2.md  DESIGN_PHILOSOPHY.md  ENHANCEMENT_SUMMARY.md  GETTING_STARTED.md  OPTIMIZATION_SUMMARY.md  TESTING_REPORT.md
docs/examples/: __init__.py  api_showcase.py  basic_usage.py  demo.py
src/repox/: __init__.py  __main__.py  api.py  assistant.py  cli.py  cli_old.py  config.py  context.py  elegant_api.py  filter.py  hierarchical_filter.py  locator.py  repomix_integration.py  repository.py
src/repox/api/: __init__.py  classic.py  elegant.py
src/repox/cli/: __init__.py  commands.py  main.py
src/repox/core/: __init__.py  assistant.py  config.py
src/repox/processing/: __init__.py  context.py  filter.py  hierarchical_filter.py  locator.py
src/repox/repository/: __init__.py  analyzer.py  repomix_integration.py
src/repox/utils/: __init__.py  models.py
tests/: __init__.py  conftest.py  test_assistant.py  test_config.py  test_context.py  test_models.py  test_repository.py
